feat: added anylize and notifications
