# Task3/arkpz-pzpi-22-3-shut-oleksandr-task3/src/modules/notifications/dto/create-notification.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger'
+import { IsNotEmpty, IsString } from 'class-validator'
+
+export class CreateNotificationDto {
+  @ApiProperty({ example: 'userId', description: 'User ID' })
+  @IsNotEmpty()
+  @IsString()
+  user: string
+
+  @ApiProperty({ example: 'temperature is higher than normal' })
+  @IsNotEmpty()
+  message: string
+}
