# Task3/arkpz-pzpi-22-3-shut-oleksandr-task3/src/modules/users/users.schema.ts
@@ -13,6 +13,9 @@ export class User {
 
   @Prop({ type: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Role' }] })
   roles: Types.ObjectId[]
+
+  @Prop({ type: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Notification' }] })
+  notifications: Types.ObjectId[]
 }
 
 export const UserSchema = SchemaFactory.createForClass(User)
